Set up GitHub Pages deployment

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,7 +22,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://<your-username>.github.io/Website",
+  "homepage": "homepage https://waweru89.github.io/Website",
+
   "eslintConfig": {
     "extends": [
       "react-app",
