--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,8 +22,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "homepage https://waweru89.github.io/Website",
-
+  "homepage": "https://waweru89.github.io/Website",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
